feat(workspace): implement workspace entity extensions and CRUD API (#408, #416)